--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -7,3 +7,9 @@ databaseChangeLog:
       file: db/changelog/changes/03-create-roles-table.yaml
   - include:
       file: db/changelog/changes/04-create-user-roles-table.yaml
+  - include:
+      file: db/changelog/changes/05-insert-role-to-role-table.yaml
+  - include:
+      file: db/changelog/changes/06-insert-user.yaml
+  - include:
+      file: db/changelog/changes/07-insert-user-role-to-user-roles-table.yaml
