--- a/src/main/resources/db/changelog/changes/03-create-roles-table.yaml
+++ b/src/main/resources/db/changelog/changes/03-create-roles-table.yaml
@@ -15,7 +15,7 @@ databaseChangeLog:
                     nullable: false
               - column:
                   name: role_name
-                  type: tinyint(255)
+                  type: varchar(255)
                   constraints:
                     nullable: false
                     unique: true
