--- a/src/main/resources/db/changelog/changes/05-insert-role-to-role-table.yaml
+++ b/src/main/resources/db/changelog/changes/05-insert-role-to-role-table.yaml
@@ -6,8 +6,12 @@ databaseChangeLog:
         - insert:
             tableName: roles
             columns:
-              - column: {name: role_name, value: "ADMIN"}
+              - column:
+                  name: role_name
+                  value: "ADMIN"
         - insert:
             tableName: roles
             columns:
-              - column: {name: role_name, value: "USER" }
+              - column:
+                  name: role_name
+                  value: "USER"
