--- a/src/main/resources/db/changelog/changes/07-insert-user-role-to-user-roles-table.yaml
+++ b/src/main/resources/db/changelog/changes/07-insert-user-role-to-user-roles-table.yaml
@@ -8,16 +8,16 @@ databaseChangeLog:
             columns:
               - column:
                   name: role_id
-                  value: "1"
+                  valueComputed: (SELECT id FROM roles WHERE role_name = 'ADMIN')
               - column:
                   name: user_id
-                  value: "1"
+                  valueComputed: (SELECT id FROM users WHERE email = 'admin@admin.com')
         - insert:
             tableName: users_roles
             columns:
               - column:
                   name: role_id
-                  value: "2"
+                  valueComputed: (SELECT id FROM roles WHERE role_name = 'USER')
               - column:
                   name: user_id
-                  value: "2"
+                  valueComputed: (SELECT id FROM users WHERE email = 'user@user.com')
