--- a/src/main/resources/db/changelog/changes/04-create-user-roles-table.yaml
+++ b/src/main/resources/db/changelog/changes/04-create-user-roles-table.yaml
@@ -1,7 +1,7 @@
 databaseChangeLog:
   - changeSet:
       id: create-users-roles-table
-      author: voitenko
+      author: Oleksand voitenko
       changes:
         - createTable:
             tableName: users_roles
