--- a/src/main/resources/db/changelog/changes/07-insert-user-role-to-user-roles-table.yaml
+++ b/src/main/resources/db/changelog/changes/07-insert-user-role-to-user-roles-table.yaml
@@ -2,22 +2,35 @@ databaseChangeLog:
   - changeSet:
       id: insert-users-roles
       author: voitenko
+      preConditions:
+        - sqlCheck:
+            expectedResult: 1
+            sql: SELECT COUNT(*) FROM users WHERE email='admin@admin.com'
+        - sqlCheck:
+            expectedResult: 1
+            sql: SELECT COUNT(*) FROM users WHERE email='user@user.com'
+        - sqlCheck:
+            expectedResult: 1
+            sql: SELECT COUNT(*) FROM roles WHERE role_name='ADMIN'
+        - sqlCheck:
+            expectedResult: 1
+            sql: SELECT COUNT(*) FROM roles WHERE role_name='USER'
       changes:
         - insert:
             tableName: users_roles
             columns:
               - column:
-                  name: role_id
-                  valueComputed: (SELECT id FROM roles WHERE role_name = 'ADMIN')
-              - column:
                   name: user_id
-                  valueComputed: (SELECT id FROM users WHERE email = 'admin@admin.com')
+                  valueComputed: (SELECT id FROM users WHERE email='admin@admin.com')
+              - column:
+                  name: role_id
+                  valueComputed: (SELECT id FROM roles WHERE role_name='ADMIN')
         - insert:
             tableName: users_roles
             columns:
               - column:
-                  name: role_id
-                  valueComputed: (SELECT id FROM roles WHERE role_name = 'USER')
-              - column:
                   name: user_id
-                  valueComputed: (SELECT id FROM users WHERE email = 'user@user.com')
+                  valueComputed: (SELECT id FROM users WHERE email='user@user.com')
+              - column:
+                  name: role_id
+                  valueComputed: (SELECT id FROM roles WHERE role_name='USER')
