--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -13,3 +13,5 @@ databaseChangeLog:
       file: db/changelog/changes/06-insert-user.yaml
   - include:
       file: db/changelog/changes/07-insert-user-role-to-user-roles-table.yaml
+  - include:
+      file: db/changelog/changes/08-create-categories-table.yaml
