-+ update create-books-categories-table (copy/paste is evil)

--- a/src/main/resources/db/changelog/changes/09-create-books-categories-table.yaml
+++ b/src/main/resources/db/changelog/changes/09-create-books-categories-table.yaml
@@ -11,7 +11,7 @@ databaseChangeLog:
                   type: bigint
                   constraints:
                     foreignKeyName: fk_books-categories_book
-                    references: roles(id)
+                    references: books(id)
                     deleteCascade: true
                     primaryKey: true
               - column:
@@ -19,6 +19,6 @@ databaseChangeLog:
                   type: bigint
                   constraints:
                     foreignKeyName: fk_books-categories_category
-                    references: users(id)
+                    references: categories(id)
                     deleteCascade: true
                     primaryKey: true
