--- a/src/main/resources/db/changelog/changes/09-create-books-categories-table.yaml
+++ b/src/main/resources/db/changelog/changes/09-create-books-categories-table.yaml
@@ -4,7 +4,7 @@ databaseChangeLog:
       author: voitenko
       changes:
         - createTable:
-            tableName: books-categories
+            tableName: books_categories
             columns:
               - column:
                   name: book_id
