--- a/src/main/resources/db/changelog/changes/12-create-cart-items-table.yaml
+++ b/src/main/resources/db/changelog/changes/12-create-cart-items-table.yaml
@@ -14,7 +14,7 @@ databaseChangeLog:
                     primaryKey: true
                     nullable: false
               - column:
-                  name: shopping_card_id
+                  name: shopping_cart_id
                   type: BIGINT
                   constraints:
                     nullable: false
