--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -23,3 +23,7 @@ databaseChangeLog:
       file: db/changelog/changes/11-create-shopping-carts-table.yaml
   - include:
       file: db/changelog/changes/12-create-cart-items-table.yaml
+  - include:
+      file: db/changelog/changes/13-create-order-table.yaml
+  - include:
+      file: db/changelog/changes/14-create-order-item-table.yaml
