--- a/src/main/resources/db/changelog/changes/14-create-order-item-table.yaml
+++ b/src/main/resources/db/changelog/changes/14-create-order-item-table.yaml
@@ -1,6 +1,6 @@
 databaseChangeLog:
   - changeSet:
-      id: create-order-item-table
+      id: create-order-items-table
       author: voitenko
       changes:
         - createTable:
@@ -12,21 +12,20 @@ databaseChangeLog:
                   autoIncrement: true
                   constraints:
                     primaryKey: true
-                    nullable: false
               - column:
                   name: order_id
                   type: BIGINT
                   constraints:
                     nullable: false
                     references: orders(id)
-                    foreignKeyName: fk_order_items_orders_id
+                    foreignKeyName: fk_order_items_order_id
               - column:
                   name: book_id
                   type: BIGINT
                   constraints:
                     nullable: false
                     references: books(id)
-                    foreignKeyName: fk_order_items_books_id
+                    foreignKeyName: fk_order_items_book_id
               - column:
                   name: quantity
                   type: integer
